--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="footer">
       <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+        By <a href="https://github.com/AdamDTak2112">Adam Tak</a>
       </p>
     </div>
   </body>
